fix aria labels and spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -296,7 +296,7 @@ a .likes-hover:hover{
 
 .list-group-item{ 
    background-color: #fefbf1;
-   text: #1e2d2f;
+   color: #1e2d2f;
 }
 
 #post-panel {
